Fixes sidebar width on small screen.

--- a/app/assets/stylesheets/CommentThread.sass
+++ b/app/assets/stylesheets/CommentThread.sass
@@ -236,7 +236,7 @@
     right: -246px
 
   #Sidebar
-    flex-basis: 8rem !important
+    flex-basis: 12rem !important
     &.has-comment-threads-open
       margin-left: -13em
 
